- Fixed #numbers.sequence(from,to) throwing an exception if from > to (bad computation of 'step' argument).
- Fixed OGNL expressions calling the 'hashCode()' method instead of accessing a public 'code' property.
- Improved JavaScript serialization: allow Jackson to (optionally) serialise JSR310 dates as ISO8601
- Updated AttoParser dependency to 2.0.2.RELEASE.
- Updated OGNL dependency to 3.1.12.


3.0.2
=====
- Fixed <head> being aggressively auto-closed by block tags inside <script> or <template> tags, which
  caused JavaScript template fragments to be incorrectly inserted from other templates.
- Fixed Jackson not escaping '</' in JavaScript/JSON literals, which could allow code injection that
  prematurely closed </script> tags when browsers display pages in HTML mode.
- Fixed JavaScript/JSON literals not escaping amperand (&), which could allow code injection that
  prematurely closed </script> tags when browsers display pages in XHTML (application/xhtml+xml) mode.
- Improved error handling during Jackson initialization.
- Updated AttoParser dependency to 2.0.1.RELEASE.
- Updated Unbescape dependency to 1.1.4.RELEASE.
- Updated OGNL dependency to 3.1.10, removed direct dependency on javassist.


3.0.1
=====
- Fixed bad results of integer division in some scenarios due to BigDecimal conversion.
- Fixed th:switch not correctly working with variable of type Byte.
- Fixed Java version compatibility issue when calling StandardCache.keySet() from Java 7.
- Improved error handling during initialisation of Jackson-based JavaScript serializer objects.


3.0.0
=====
See: http://forum.thymeleaf.org/Thymeleaf-3-0-is-here-td4029676.html
     http://www.thymeleaf.org/doc/articles/thymeleaf3migration.html
- New event-based template processing engine
- Full HTML5 support, new parsing infrastructure
- Thymeleaf 3.0 Template Mode set
- Inlined output expressions
- New syntax for textual template modes
- Refactoring of the inlining mechanism
- New Processor API