@@ -5,6 +5,7 @@
 - Fixed #numbers.sequence(from,to) throwing an exception if from > to (bad computation of 'step' argument).
 - Fixed OGNL expressions calling the 'hashCode()' method instead of accessing a public 'code' property.
 - Improved JavaScript serialization: allow Jackson to (optionally) serialise JSR310 dates as ISO8601
+- Improved cache monitoring: published counters and added hit/miss ratios.
 - Updated AttoParser dependency to 2.0.2.RELEASE.
 - Updated OGNL dependency to 3.1.12.
 
